[tool.poetry]
name = "crawling"
version = "0.0.1"
description = "web crawling"
authors = ["renzo <renzo.1980@jobkorea.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
